manifests/modules/notebooks/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: odh-dashboard-notebooks-ui
  annotations:
    service.beta.openshift.io/serving-cert-secret-name: notebooks-proxy-tls
    service.beta.kubernetes.io/backend-protocol: HTTPS
spec:
  selector:
    deployment: notebooks-ui
  ports:
    - name: notebooks-ui
      protocol: TCP
      port: 9043
      targetPort: 9043
